[gd_scene load_steps=6 format=3 uid="uid://cx4pke8blrrs5"]

[ext_resource type="Script" path="res://Pedestal.gd" id="1_dsvxv"]
[ext_resource type="Texture2D" uid="uid://bitrrceftl1tf" path="res://assets/pedestal.png" id="2_wufp0"]
[ext_resource type="Texture2D" uid="uid://yj3igc4j5owy" path="res://assets/pedestal_win.png" id="3_kemw0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0s6su"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wufp0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kemw0")
}],
"loop": true,
"name": &"win",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgumv"]
size = Vector2(17, 21)

[node name="Pedestal" type="Node2D"]
script = ExtResource("1_dsvxv")
metadata/_edit_group_ = true

[node name="PedestalSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0s6su")

[node name="PedestalArea" type="Area2D" parent="."]
collision_mask = 9

[node name="PedestalBox" type="CollisionShape2D" parent="PedestalArea"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_wgumv")

[node name="WinTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[connection signal="area_entered" from="PedestalArea" to="." method="_on_pedestal_area_area_entered"]
[connection signal="body_shape_entered" from="PedestalArea" to="." method="_on_pedestal_area_body_shape_entered"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
